--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,25 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./assets/fonts/Intrer_18pt-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/Inter_28pt-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter_Bold";
-  src: url("./assets/fonts/Intrer_18pt-Bold.ttf") format("truetype");
+  src: url("./assets/fonts/Inter_28pt-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Lato-Bold";
+  src: url("./assets/fonts/Lato-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Lato-Regular";
+  src: url("./assets/fonts/Lato-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
