--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,12 @@
   font-style: normal;
 }
 @font-face {
+  font-family: "Lato-Thin";
+  src: url("./assets/fonts/Lato-Thin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
   font-family: "Lato-Regular";
   src: url("./assets/fonts/Lato-Regular.ttf") format("truetype");
   font-weight: normal;
