--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   src: url("./assets/fonts/Poppins-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -20,34 +21,65 @@
   src: url("./assets/fonts/Inter_28pt-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Inter_Bold";
   src: url("./assets/fonts/Inter_28pt-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Lato-Bold";
   src: url("./assets/fonts/Lato-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Lato-Thin";
   src: url("./assets/fonts/Lato-Thin.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Lato-Regular";
   src: url("./assets/fonts/Lato-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+  /* Optimize rendering performance */
+  text-rendering: optimizeSpeed;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Performance optimizations */
+* {
+  /* Enable hardware acceleration for smoother interactions */
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+/* Optimize animations and transitions */
+*,
+*::before,
+*::after {
+  will-change: auto;
+}
+
+/* Reduce paint and layout operations */
+img,
+video {
+  content-visibility: auto;
+  contain-intrinsic-size: 1px 1000px;
 }
 
 /* Fix for border issue between sections */
@@ -59,5 +91,6 @@ section {
   border-bottom: none !important;
   outline: none !important;
   box-shadow: none !important;
+  /* Optimize repaints */
+  contain: layout style paint;
 }
-
